Add full image/file transfer flow with validation, progress, and chat previews

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,5 @@ PORT=5001
 MONGO_URI=
 JWT_SECRET=
 CLIENT_ORIGIN=http://localhost:3000,http://localhost:5173
+IMAGE_UPLOAD_MAX_MB=10
+FILE_UPLOAD_MAX_MB=50
