--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,6 @@ JWT_SECRET=
 CLIENT_ORIGIN=http://localhost:3000,http://localhost:5173
 IMAGE_UPLOAD_MAX_MB=10
 FILE_UPLOAD_MAX_MB=50
+AUTH_RATE_LIMIT_MAX=40
+API_RATE_LIMIT_PER_MIN=400
+JSON_BODY_LIMIT=2mb
