--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "secure-chat-backend",
   "version": "1.0.0",
   "type": "module",
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
+    "test": "node --test tests/**/*.test.js",
     "test:e2e": "node e2e/api.e2e.js"
   },
   "dependencies": {
@@ -13,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "morgan": "^1.10.0",
@@ -21,6 +25,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "socket.io-client": "^4.8.1",
+    "supertest": "^7.0.0"
   }
 }
